# distributed_robots

./: CMakeLists.txt  package.xml  readme.MD
include/: publisher.hpp  subscriber.hpp
launch/: system.launch
src/: publisher.cpp  subscriber.cpp
